--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version : '2'
 services:
-  product-content-service:
-    container_name: product-content-service
+  content-service:
+    container_name: content-service
     tty: true
     build: ../
     ports:
