--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.7.RELEASE'
 }
 
-group 'ddai-trip-study'
+group 'ddai'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
