--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,7 @@ server:
 
 spring:
   rabbitmq:
-    # todo: fix docker containers interconnection
-    host: 192.168.1.2
+    host: rabbitmq
     port: 5672
     username: guest
     password: guest
