--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ dependencies {
     compile 'ddai:event-bus:1.0-SNAPSHOT'
     compile 'org.springframework.boot:spring-boot-dependencies:2.0.5.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-data-redis:2.2.1.RELEASE'
+
+    compile 'mysql:mysql-connector-java:5.1.6'
+    compile 'org.springframework.boot:spring-boot-starter-jdbc:2.2.1.RELEASE'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
