--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,4 +12,8 @@ spring:
   redis:
     host: redis
     port: 6379
+  datasource:
+    url: jdbc:mysql://mysql:3306/content
+    username: root
+    password: 1234
 
